--- a/CSCAssignment2/CSCAssignment2.csproj
+++ b/CSCAssignment2/CSCAssignment2.csproj
@@ -26,6 +26,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.21" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Stripe.net" Version="37.27.0" />
   </ItemGroup>
 
