--- a/CSCAssignment2/CSCAssignment2.csproj
+++ b/CSCAssignment2/CSCAssignment2.csproj
@@ -27,6 +27,7 @@
     </PackageReference>
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.21" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Recombee.ApiClient" Version="3.0.0" />
     <PackageReference Include="Stripe.net" Version="37.27.0" />
   </ItemGroup>
 
